--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.0.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "jwt-decode": "^4.0.0",
     "ng2-charts": "^4.1.1",
     "rxjs": "~7.5.0",
     "sass": "^1.77.4",
